[package]
name = "rusty_crm2"
version = "0.1.0"
edition = "2021"
authors = ["Shane Poppleton <shane@bjja.com.au>"]
description = "A simple command line contact manager"
license = "GPL-3.0-or-later"
repository = "https://github.com/codemonkey76/rusty_crm2"

[dependencies]
anyhow = "1.0.71"
backtrace = "0.3.68"
clap = { version = "4.3.10", features = ["env", "cargo"] }
crossterm = "0.26.1"
dirs-next = "2.0.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = "1.0.164"
simplelog = "0.12.1"
